test/files/neg/xmltruncated5.check
xmltruncated5.scala:4: error: Input ended while parsing XML

^
one error found
